--- a/interface/package.json
+++ b/interface/package.json
@@ -23,6 +23,7 @@
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.32.4",
 		"postcss": "^8.4.27",
+		"postcss-remove-classes": "^2.0.0",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4",
@@ -42,6 +43,7 @@
 		"daisyui": "^3.5.1",
 		"jwt-decode": "^3.1.2",
 		"svelte-dnd-list": "^0.1.8",
-		"svelte-modals": "^1.3.0"
+		"svelte-modals": "^1.3.0",
+		"svelte-range-slider-pips": "^2.3.1"
 	}
 }
