--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ data_dir = data
 extra_configs = 
 	factory_settings.ini
 	features.ini
-default_envs = esp32-s3-devkitc-1
+default_envs = esp32dev
 
 [env]
 framework = arduino
@@ -26,7 +26,7 @@ build_flags =
     -D APP_NAME=\"ESP32-Sveltekit\" ; Must only contain characters from [a-zA-Z0-9-_] as this is converted into a filename
     -D APP_VERSION=\"0.3.0\" ; semver compatible version string
 	; Uncomment to receive log messages from the ESP Arduino Core
-	-D CORE_DEBUG_LEVEL=2
+	-D CORE_DEBUG_LEVEL=1
     ; Move all networking stuff to the protocol core 0 and leave business logic on application core 1
     -D ESP32SVELTEKIT_RUNNING_CORE=0
     ; Uncomment EMBED_WWW to embed the WWW data in the firmware binary
