Add RF_PIN constant and initialize OpenShock library in Evaluator constructor

--- a/factory_settings.ini
+++ b/factory_settings.ini
@@ -51,4 +51,6 @@ build_flags =
   -D WAKEUP_PIN_NUMBER=38 ; pin number to wake up the ESP
   -D WAKEUP_SIGNAL=0 ; 1 for wakeup on HIGH, 0 for wakeup on LOW
 
+  ; RF pin
+  -D RF_PIN=21
 
