--- a/platformio.ini
+++ b/platformio.ini
@@ -18,13 +18,13 @@ default_envs = esp32dev
 
 [env]
 framework = arduino
-platform = espressif32
+platform = espressif32 @ 6.6.0
 build_flags = 
 	${factory_settings.build_flags}
 	${features.build_flags}
     -D BUILD_TARGET=\"$PIOENV\"
     -D APP_NAME=\"ESP32-Sveltekit\" ; Must only contain characters from [a-zA-Z0-9-_] as this is converted into a filename
-    -D APP_VERSION=\"0.3.0\" ; semver compatible version string
+    -D APP_VERSION=\"0.3.1\" ; semver compatible version string
 	; Uncomment to receive log messages from the ESP Arduino Core
 	-D CORE_DEBUG_LEVEL=1
     ; Move all networking stuff to the protocol core 0 and leave business logic on application core 1
@@ -32,8 +32,8 @@ build_flags =
     ; Uncomment EMBED_WWW to embed the WWW data in the firmware binary
     -D EMBED_WWW
     ; Uncomment to configure Cross-Origin Resource Sharing
-    -D ENABLE_CORS
-    -D CORS_ORIGIN=\"*\"
+    ; -D ENABLE_CORS
+    ; -D CORS_ORIGIN=\"*\"
     ; Serve config files from flash
     ;-D SERVE_CONFIG_FILES
     ; Uncomment to enable informations from ESP32-Sveltekit in Serial Monitor
@@ -75,11 +75,11 @@ board_build.mcu = esp32c3
 ; Uncomment min_spiffs.csv setting if using EMBED_WWW with ESP32
 board_build.partitions = min_spiffs.csv
 ; Use USB CDC for firmware upload and serial terminal
-board_upload.before_reset = usb_reset
-build_flags = 
-    ${env.build_flags}
-    -DARDUINO_USB_CDC_ON_BOOT=1
-    -DARDUINO_USB_MODE=1
+; board_upload.before_reset = usb_reset
+; build_flags = 
+;     ${env.build_flags}
+;     -DARDUINO_USB_CDC_ON_BOOT=1
+;     -DARDUINO_USB_MODE=1
 
 [env:esp32-s3-devkitc-1]
 board = esp32-s3-devkitc-1
